--- a/P2_ASamborska/Config/DefaultGame.ini
+++ b/P2_ASamborska/Config/DefaultGame.ini
@@ -83,7 +83,7 @@ bSkipMovies=False
 +EarlyDownloaderPakFileFiles=...\*.upluginmanifest
 +EarlyDownloaderPakFileFiles=...\*.uproject
 +EarlyDownloaderPakFileFiles=...\global_sf*.metalmap
-+MapsToCook=(FilePath="Content/Levels/Start")
++MapsToCook=(FilePath="/Game/Levels/Start")
 bNativizeBlueprintAssets=False
 bNativizeOnlySelectedBlueprints=False
 
