--- a/P2_ASamborska/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/P2_ASamborska/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,7 +108,6 @@ LastLevel=/Game/Levels/Start
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -512,13 +511,29 @@ aa_C.Replication=True
 aa_C.Input=True
 aa_C.Actor=True
 aa_C.TransformCommon=True
+BP_GameMode_C.Tick=True
+BP_GameMode_C.Classes=True
+BP_GameMode_C.Game=True
+BP_GameMode_C.GameMode=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.LODSystem=True
+WorldSettings.Tick=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/aa
-MRUItem2=/Game/Blueprints/BP_Crystal
-MRUItem3=/Game/Levels/Start
-MRUItem4=/Game/Levels/MainLevel
+MRUItem1=/Game/Blueprints/BP_GameMode
+MRUItem2=/Game/Levels/Start
+MRUItem3=/Game/Blueprints/aa
+MRUItem4=/Game/Blueprints/BP_Crystal
+MRUItem5=/Game/Levels/MainLevel
 
 [RootWindow]
 ScreenPosition=X=237.000 Y=23.000
@@ -569,7 +584,7 @@ FBX=../../../../../studia/programowanie/ballrunner/P2_ASamborska/Content/
 FBXAnim=../../../../../studia/programowanie/ballrunner/P2_ASamborska/Content/
 GenericImport=../../../../../studia/programowanie/ballrunner/P2_ASamborska/Content/
 GenericExport=../../../../../studia/programowanie/ballrunner/P2_ASamborska/Content/
-GenericOpen=Content/Levels
+GenericOpen=../../../../../studia/programowanie/ballrunner/P2_ASamborska/Content/Levels
 GenericSave=../../../../../studia/programowanie/ballrunner/P2_ASamborska/Content/
 MeshImportExport=../../../../../studia/programowanie/ballrunner/P2_ASamborska/Content/
 WorldRoot=../../../../../studia/programowanie/ballrunner/P2_ASamborska/Content/
@@ -1256,8 +1271,8 @@ ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
 Object=
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/aa.aa;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
+RecentlyPlaced=/Game/Blueprints/aa.aa;
 RecentlyPlaced=/Game/Blueprints/BP_Crystal.BP_Crystal;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Water_Ocean.M_Water_Ocean;
@@ -1279,5 +1294,9 @@ ProjectPackagingSettings.Packaging=True
 /Game/Blueprints/BP_Crystal.BP_Crystal=1
 /Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn=1
 /Game/Blueprints/aa.aa=1
+/Game/Blueprints/BP_GameMode.BP_GameMode=1
+
+[SelectionDetails]
+PreserveScaleRatio=False
 
 
