--- a/P2_ASamborska/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/P2_ASamborska/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,6 +108,7 @@ LastLevel=/Game/Levels/Start
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -556,11 +557,17 @@ K2Node_InputAxisEvent.Input=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableGet.Events=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
+FloatProperty.Variable=True
+FloatProperty.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_Crystal
-MRUItem1=/Game/Blueprints/BP_PlayerPawn
-MRUItem2=/Game/Levels/Start
+MRUItem0=/Game/Blueprints/BP_PlayerPawn
+MRUItem1=/Game/Levels/Start
+MRUItem2=/Game/Blueprints/BP_Crystal
 MRUItem3=/Game/Blueprints/BP_GameMode
 MRUItem4=/Game/Blueprints/aa
 MRUItem5=/Game/Levels/MainLevel
@@ -1390,5 +1397,8 @@ InputSettings.Bindings=True
 
 [SelectionDetails]
 PreserveScaleRatio=False
+
+[SuppressableDialogs]
+DeleteVariableInUse_Warning=False
 
 
