--- a/P2_ASamborska/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/P2_ASamborska/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -18,6 +18,7 @@ AssetViewerProfileName=
 MaterialQualityLevel=1
 PreviewShaderPlatformName=None
 bIsMaterialQualityOverridePlatform=False
+bAllowSelectTranslucent=False
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 LaptopScreenResolutions=(Description="Apple MacBook Air 11",Width=1366,Height=768,AspectRatio="16:9",bCanSwapAspectRatio=False,ProfileName="")
@@ -108,7 +109,6 @@ LastLevel=/Game/Levels/Start
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -563,10 +563,14 @@ FloatProperty.Variable=True
 FloatProperty.DefaultValueCategory=True
 K2Node_VariableSet.Variable=True
 K2Node_VariableSet.DefaultValueCategory=True
+BP_PlayerPawn_C.Default=True
+GeomModifier_Extrude.Settings=True
+GeomModifier_Pen.Settings=True
+GeomModifier_Clip.Settings=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/Levels/Start
+MRUItem0=/Game/Levels/Start
+MRUItem1=/Game/Blueprints/BP_PlayerPawn
 MRUItem2=/Game/Blueprints/BP_Crystal
 MRUItem3=/Game/Blueprints/BP_GameMode
 MRUItem4=/Game/Blueprints/aa
@@ -603,7 +607,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1367,8 +1371,15 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
 Object=
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[3]\" "
+GeomModifier_Extrude="\"Object.Settings\" "
+GeomModifier_Edit="\"Object.Settings\" "
+GeomModifier="\"Object.Settings\" "
+GeomModifier_Pen="\"Object.Settings\" "
+GeomModifier_Clip="\"Object.Settings\" "
 
 [PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
 RecentlyPlaced=/Game/Blueprints/BP_PlayerPawn.BP_PlayerPawn;
 RecentlyPlaced=/Game/Blueprints/aa.aa;
 RecentlyPlaced=/Game/Blueprints/BP_Crystal.BP_Crystal;
@@ -1400,5 +1411,14 @@ PreserveScaleRatio=False
 
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
+ExtrudeCoordsWarning=False
+
+[FoliageEdit]
+WindowPosition=-1,-1,284,400
+bFilterFoliage=False
+bShowPaletteItemDetails=True
+bShowPaletteItemTooltips=True
+ActivePaletteViewMode=0
+PaletteThumbnailScale=0.300000
 
 
