--- a/P2_ASamborska/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/P2_ASamborska/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -587,11 +587,19 @@ BoxComponent.ComponentReplication=True
 BoxComponent.Cooking=True
 BoxComponent.Events=True
 BP_Trigger_C.TransformCommon=True
+BP_Trigger_C.Default=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+K2Node_Composite.GraphNodeDetail=True
+K2Node_Composite.Graph=True
+K2Node_Composite.Inputs=True
+K2Node_Composite.Outputs=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_PlayerPawn
-MRUItem1=/Game/Blueprints/BP_Trigger
-MRUItem2=/Game/Levels/Start
+MRUItem0=/Game/Blueprints/BP_Trigger
+MRUItem1=/Game/Levels/Start
+MRUItem2=/Game/Blueprints/BP_PlayerPawn
 MRUItem3=/Game/Blueprints/BP_Crystal
 MRUItem4=/Game/Blueprints/BP_GameMode
 MRUItem5=/Game/Blueprints/aa
