--- a/P2_ASamborska 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/P2_ASamborska 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -671,6 +671,20 @@ StaticMeshComponent.Navigation=True
 StaticMeshComponent.VirtualTexture=True
 BP_Crystal_C.Default=True
 SphereComponent.ComponentTick=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
+K2Node_FunctionEntry.GraphNodeDetail=True
+K2Node_FunctionEntry.Graph=True
+K2Node_FunctionEntry.Inputs=True
+K2Node_FunctionEntry.Outputs=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+PointLightComponent.ComponentTick=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Actors/Collectables/BP_Crystal
@@ -684,7 +698,7 @@ MRUItem7=/Game/Blueprints/aa
 MRUItem8=/Game/Levels/MainLevel
 
 [RootWindow]
-ScreenPosition=X=257.000 Y=75.000
+ScreenPosition=X=269.000 Y=131.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1670,12 +1684,16 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings.W,InputSettings.Bindi
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.W,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Move Forward/Backwards,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.AxisMappings.Move Left/Right,
 StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
 SphereComponent=
-BP_Crystal_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
+BP_Crystal_C=
+K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
+LightComponentBase=
+PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
+K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
-Object=
+Object="\"Object.Light.LightingChannels\" "
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[3]\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
@@ -1686,8 +1704,8 @@ PointLightComponent="\"Object.Light.LightingChannels\" "
 LocalLightComponent="\"Object.Light.LightingChannels\" "
 LightComponent="\"Object.Light.LightingChannels\" "
 LightComponentBase="\"Object.Light.LightingChannels\" "
-SceneComponent=
-ActorComponent=
+SceneComponent="\"Object.Light.LightingChannels\" "
+ActorComponent="\"Object.Light.LightingChannels\" "
 StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 PrimitiveComponent=
@@ -1734,6 +1752,7 @@ PreserveScaleRatio=True
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
 ExtrudeCoordsWarning=False
+ChangeVariableType_Warning=False
 
 [FoliageEdit]
 WindowPosition=-1,-1,284,400
@@ -1828,4 +1847,10 @@ bBlueprintNodeUniqueNames=False
 bShowDetailedCompileResults=False
 CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
+
+[MessageLog]
+LastLogListing=BlueprintLog
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
 
