--- a/P2_ASamborska 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/P2_ASamborska 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,6 +102,7 @@ AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
 LastSize=(X=0,Y=0)
+LastExecutedPlayModeType=PlayMode_Simulate
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -685,17 +686,49 @@ PropertyWrapper.DefaultValueCategory=True
 EdGraphNode_Comment.GraphNodeDetail=True
 EdGraphNode_Comment.Comment=True
 PointLightComponent.ComponentTick=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
+Projectile_C.Tick=True
+Projectile_C.Replication=True
+Projectile_C.Rendering=True
+Projectile_C.Collision=True
+Projectile_C.Actor=True
+Projectile_C.Input=True
+StaticMeshComponent.ComponentTick=True
+SphereComponent.HLOD=True
+SphereComponent.Mobile=True
+SceneComponent.Collision=True
+Projectile_C.TransformCommon=True
+ProjectileMovementComponent.ProjectileSimulation=True
+ProjectileMovementComponent.Collision=True
+ProjectileMovementComponent.Variable=True
+ProjectileMovementComponent.Sockets=True
+ProjectileMovementComponent.Projectile=True
+ProjectileMovementComponent.ProjectileBounces=True
+ProjectileMovementComponent.ComponentTick=True
+ProjectileMovementComponent.Homing=True
+ProjectileMovementComponent.ProjectileInterpolation=True
+ProjectileMovementComponent.Velocity=True
+ProjectileMovementComponent.PlanarMovement=True
+ProjectileMovementComponent.MovementComponent=True
+ProjectileMovementComponent.Tags=True
+ProjectileMovementComponent.ComponentReplication=True
+ProjectileMovementComponent.Activation=True
+ProjectileMovementComponent.Cooking=True
+ProjectileMovementComponent.Events=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Actors/Collectables/BP_Crystal
+MRUItem0=/Game/Blueprints/Actors/Projectiles/Projectile
 MRUItem1=/Game/Levels/Start
-MRUItem2=/Game/Materials/M_Crystal
-MRUItem3=/Game/Blueprints/BP_GameMode
-MRUItem4=/Game/Blueprints/BP_Trigger
-MRUItem5=/Game/Blueprints/BP_PlayerPawn
-MRUItem6=/Game/Blueprints/BP_Crystal
-MRUItem7=/Game/Blueprints/aa
-MRUItem8=/Game/Levels/MainLevel
+MRUItem2=/Game/Blueprints/Actors/Collectables/BP_Crystal
+MRUItem3=/Game/Materials/M_Crystal
+MRUItem4=/Game/Blueprints/BP_GameMode
+MRUItem5=/Game/Blueprints/BP_Trigger
+MRUItem6=/Game/Blueprints/BP_PlayerPawn
+MRUItem7=/Game/Blueprints/BP_Crystal
+MRUItem8=/Game/Blueprints/aa
+MRUItem9=/Game/Levels/MainLevel
 
 [RootWindow]
 ScreenPosition=X=269.000 Y=131.000
@@ -728,7 +761,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Actors/Collectables
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Actors/Projectiles
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1689,11 +1722,12 @@ K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshCompon
 LightComponentBase=
 PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
 K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
+Projectile_C=SphereComponent.Physics.ConstraintsGroup,
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
-Object="\"Object.Light.LightingChannels\" "
+Object=
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[3]\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
@@ -1704,16 +1738,17 @@ PointLightComponent="\"Object.Light.LightingChannels\" "
 LocalLightComponent="\"Object.Light.LightingChannels\" "
 LightComponent="\"Object.Light.LightingChannels\" "
 LightComponentBase="\"Object.Light.LightingChannels\" "
-SceneComponent="\"Object.Light.LightingChannels\" "
-ActorComponent="\"Object.Light.LightingChannels\" "
-StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+SceneComponent=
+ActorComponent=
+StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 PrimitiveComponent=
 SphereComponent=
 ShapeComponent=
 GeometryCollectionComponent="\"Object.ChaosPhysics.ChaosPhysics|Collisions\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Actors/Projectiles/Projectile.Projectile;
 RecentlyPlaced=/Game/Blueprints/BP_Trigger.BP_Trigger;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/StarterContent/Materials/M_Ground_Moss.M_Ground_Moss;
@@ -1745,6 +1780,7 @@ InputSettings.Bindings=True
 /Game/Blueprints/BP_Trigger.BP_Trigger=1
 /Game/Blueprints/Actors/Collectables/BP_Crystal.BP_Crystal=1
 /Game/Materials/M_Crystal.M_Crystal=1
+/Game/Blueprints/Actors/Projectiles/Projectile.Projectile=1
 
 [SelectionDetails]
 PreserveScaleRatio=True
