--- a/P2_ASamborska/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/P2_ASamborska/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -107,7 +107,7 @@ MRUItem0=/Game/Levels/Start
 MRUItem1=/Game/Levels/MainLevel
 
 [EditorStartup]
-LastLevel=/Game/StarterContent/Maps/Minimal_Default
+LastLevel=/Game/Levels/Start
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -640,6 +640,7 @@ GeometryCollectionComponent.Collision=True
 StructProperty.Variable=True
 StructProperty.DefaultValueCategory=True
 K2Node_Timeline.GraphNodeDetail=True
+BP_Crystal_C.Default=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Actors/Collectables/BP_Crystal
