--- a/P2_ASamborska 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/P2_ASamborska 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ MRUItem0=/Game/Levels/Start
 MRUItem1=/Game/Levels/MainLevel
 
 [EditorStartup]
-LastLevel=/Game/Levels/Start
+LastLevel=/Game/StarterContent/Maps/Minimal_Default
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -717,18 +717,63 @@ ProjectileMovementComponent.ComponentReplication=True
 ProjectileMovementComponent.Activation=True
 ProjectileMovementComponent.Cooking=True
 ProjectileMovementComponent.Events=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.Navigation=True
+Cannon_C.Tick=True
+Cannon_C.Replication=True
+Cannon_C.Rendering=True
+Cannon_C.Collision=True
+Cannon_C.Actor=True
+Cannon_C.Input=True
+PropertyWrapper.Events=True
+ArrowComponent.TransformCommon=True
+ArrowComponent.ArrowComponent=True
+ArrowComponent.Rendering=True
+ArrowComponent.Navigation=True
+ArrowComponent.Tags=True
+ArrowComponent.ComponentReplication=True
+ArrowComponent.Variable=True
+ArrowComponent.Cooking=True
+ArrowComponent.Sockets=True
+ArrowComponent.ComponentTick=True
+ArrowComponent.Events=True
+StaticMeshActor.MaterialParameters=False
+StaticMeshActor.HLOD=True
+StaticMeshActor.Mobile=True
+Cannon_C.TransformCommon=True
+ProjectileMovementComponent.AssetUserData=False
+Cannon_C.LOD=False
+Cannon_C.Cooking=False
+StaticMeshComponent.AssetUserData=True
+ChildActorComponent.ComponentTick=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Actors/Projectiles/Projectile
+MRUItem0=/Game/Blueprints/Cannon
 MRUItem1=/Game/Levels/Start
-MRUItem2=/Game/Blueprints/Actors/Collectables/BP_Crystal
-MRUItem3=/Game/Materials/M_Crystal
-MRUItem4=/Game/Blueprints/BP_GameMode
-MRUItem5=/Game/Blueprints/BP_Trigger
-MRUItem6=/Game/Blueprints/BP_PlayerPawn
-MRUItem7=/Game/Blueprints/BP_Crystal
-MRUItem8=/Game/Blueprints/aa
-MRUItem9=/Game/Levels/MainLevel
+MRUItem2=/Game/Blueprints/Actors/Projectiles/Projectile
+MRUItem3=/Game/Meshes/Cannon
+MRUItem4=/Game/Meshes/Cannon_Base
+MRUItem5=/Game/Blueprints/Actors/Collectables/BP_Crystal
+MRUItem6=/Game/Materials/M_Crystal
+MRUItem7=/Game/Blueprints/BP_GameMode
+MRUItem8=/Game/Blueprints/BP_Trigger
+MRUItem9=/Game/Blueprints/BP_PlayerPawn
+MRUItem10=/Game/Blueprints/BP_Crystal
+MRUItem11=/Game/Blueprints/aa
+MRUItem12=/Game/Levels/MainLevel
 
 [RootWindow]
 ScreenPosition=X=269.000 Y=131.000
@@ -761,7 +806,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Actors/Projectiles
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1637,6 +1682,8 @@ GooglePADEditor.TimeStamp=2021.05.05-11.32.20
 GooglePADEditor.LastCompileMethod=Unknown
 SteamVREditor.TimeStamp=2021.05.05-11.33.05
 SteamVREditor.LastCompileMethod=Unknown
+StaticMeshEditor.TimeStamp=2021.05.05-11.23.32
+StaticMeshEditor.LastCompileMethod=Unknown
 
 [LandscapeEdit]
 AlphaBrushAutoRotate=True
@@ -1715,7 +1762,7 @@ PaperRuntimeSettings=InputSettings.Bindings.ActionMappings.W,InputSettings.Bindi
 TcpMessagingSettings=InputSettings.Bindings.ActionMappings.W,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Move Forward/Backwards,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.AxisMappings.Move Left/Right,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.W,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Move Forward/Backwards,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.AxisMappings.Move Left/Right,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.W,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings.Move Forward/Backwards,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.NewActionMapping_2,InputSettings.Bindings.AxisMappings.Move Left/Right,
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
+StaticMeshComponent=
 SphereComponent=
 BP_Crystal_C=
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
@@ -1723,11 +1770,15 @@ LightComponentBase=
 PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
 K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
 Projectile_C=SphereComponent.Physics.ConstraintsGroup,
+Cannon_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+BrushComponent=
+Brush=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
-Object=
+Object="\"Object.Rendering.CustomPrimitiveData\" "
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[3]\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
@@ -1738,16 +1789,22 @@ PointLightComponent="\"Object.Light.LightingChannels\" "
 LocalLightComponent="\"Object.Light.LightingChannels\" "
 LightComponent="\"Object.Light.LightingChannels\" "
 LightComponentBase="\"Object.Light.LightingChannels\" "
-SceneComponent=
-ActorComponent=
-StaticMeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Lighting.LightmassSettings\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
-PrimitiveComponent=
-SphereComponent=
-ShapeComponent=
+SceneComponent="\"Object.Rendering.CustomPrimitiveData\" "
+ActorComponent="\"Object.Rendering.CustomPrimitiveData\" "
+StaticMeshComponent="\"Object.Rendering.CustomPrimitiveData\" "
+MeshComponent="\"Object.Rendering.CustomPrimitiveData\" "
+PrimitiveComponent="\"Object.Rendering.CustomPrimitiveData\" "
+SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" "
+ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" "
 GeometryCollectionComponent="\"Object.ChaosPhysics.ChaosPhysics|Collisions\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Projectile_C="\"Object.Replication.ReplicatedMovement\" "
+ArrowComponent="\"Object.Rendering.CustomPrimitiveData\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Cannon.Cannon;
+RecentlyPlaced=/Game/Meshes/Cannon_Base.Cannon_Base;
+RecentlyPlaced=/Game/Meshes/Cannon.Cannon;
 RecentlyPlaced=/Game/Blueprints/Actors/Projectiles/Projectile.Projectile;
 RecentlyPlaced=/Game/Blueprints/BP_Trigger.BP_Trigger;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
@@ -1781,6 +1838,9 @@ InputSettings.Bindings=True
 /Game/Blueprints/Actors/Collectables/BP_Crystal.BP_Crystal=1
 /Game/Materials/M_Crystal.M_Crystal=1
 /Game/Blueprints/Actors/Projectiles/Projectile.Projectile=1
+/Game/Meshes/Cannon_Base.Cannon_Base=1
+/Game/Meshes/Cannon.Cannon=1
+/Game/Blueprints/Cannon.Cannon=1
 
 [SelectionDetails]
 PreserveScaleRatio=True
@@ -1889,4 +1949,114 @@ LastLogListing=BlueprintLog
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=False
+bImportMaterials=False
+bImportTextures=False
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
