--- a/P2_ASamborska 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/P2_ASamborska 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -135,7 +135,7 @@ MRUItem0=/Game/Levels/Start
 MRUItem1=/Game/Levels/MainLevel
 
 [EditorStartup]
-LastLevel=/Game/StarterContent/Maps/Minimal_Default
+LastLevel=/Game/Levels/Start
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -761,22 +761,23 @@ StaticMeshComponent.AssetUserData=True
 ChildActorComponent.ComponentTick=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Cannon
-MRUItem1=/Game/Levels/Start
-MRUItem2=/Game/Blueprints/Actors/Projectiles/Projectile
-MRUItem3=/Game/Meshes/Cannon
-MRUItem4=/Game/Meshes/Cannon_Base
-MRUItem5=/Game/Blueprints/Actors/Collectables/BP_Crystal
-MRUItem6=/Game/Materials/M_Crystal
-MRUItem7=/Game/Blueprints/BP_GameMode
-MRUItem8=/Game/Blueprints/BP_Trigger
-MRUItem9=/Game/Blueprints/BP_PlayerPawn
-MRUItem10=/Game/Blueprints/BP_Crystal
-MRUItem11=/Game/Blueprints/aa
-MRUItem12=/Game/Levels/MainLevel
+MRUItem0=/Game/Blueprints/Actors/Projectiles/Cannon
+MRUItem1=/Game/Blueprints/Actors/Projectiles/Projectile
+MRUItem2=/Game/Blueprints/Cannon
+MRUItem3=/Game/Levels/Start
+MRUItem4=/Game/Meshes/Cannon
+MRUItem5=/Game/Meshes/Cannon_Base
+MRUItem6=/Game/Blueprints/Actors/Collectables/BP_Crystal
+MRUItem7=/Game/Materials/M_Crystal
+MRUItem8=/Game/Blueprints/BP_GameMode
+MRUItem9=/Game/Blueprints/BP_Trigger
+MRUItem10=/Game/Blueprints/BP_PlayerPawn
+MRUItem11=/Game/Blueprints/BP_Crystal
+MRUItem12=/Game/Blueprints/aa
+MRUItem13=/Game/Levels/MainLevel
 
 [RootWindow]
-ScreenPosition=X=269.000 Y=131.000
+ScreenPosition=X=-148.000 Y=208.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -806,7 +807,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Actors/Projectiles
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1484,8 +1485,8 @@ Voice.TimeStamp=2021.05.05-11.23.35
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2021.05.05-11.23.25
 MovieSceneCapture.LastCompileMethod=External
-HierarchicalLODUtilities.TimeStamp=2020.11.02-15.36.42
-HierarchicalLODUtilities.LastCompileMethod=Unknown
+HierarchicalLODUtilities.TimeStamp=2021.05.05-11.23.21
+HierarchicalLODUtilities.LastCompileMethod=External
 BlueprintGraph.TimeStamp=2021.05.05-11.23.14
 BlueprintGraph.LastCompileMethod=External
 PlatformCrypto.TimeStamp=2021.05.05-11.30.19
@@ -1765,7 +1766,7 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings.W,InputSettings.Bindings.
 StaticMeshComponent=
 SphereComponent=
 BP_Crystal_C=
-K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
+K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 LightComponentBase=
 PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
 K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
@@ -1778,7 +1779,7 @@ Brush=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.Texture
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 ProjectPackagingSettings="\"Object.Packaging.MapsToCook\" "
-Object="\"Object.Rendering.CustomPrimitiveData\" "
+Object=
 InputSettings="\"Object.Bindings.AxisMappings.AxisMappings[3]\" "
 GeomModifier_Extrude="\"Object.Settings\" "
 GeomModifier_Edit="\"Object.Settings\" "
@@ -1789,11 +1790,11 @@ PointLightComponent="\"Object.Light.LightingChannels\" "
 LocalLightComponent="\"Object.Light.LightingChannels\" "
 LightComponent="\"Object.Light.LightingChannels\" "
 LightComponentBase="\"Object.Light.LightingChannels\" "
-SceneComponent="\"Object.Rendering.CustomPrimitiveData\" "
-ActorComponent="\"Object.Rendering.CustomPrimitiveData\" "
-StaticMeshComponent="\"Object.Rendering.CustomPrimitiveData\" "
-MeshComponent="\"Object.Rendering.CustomPrimitiveData\" "
-PrimitiveComponent="\"Object.Rendering.CustomPrimitiveData\" "
+SceneComponent=
+ActorComponent=
+StaticMeshComponent=
+MeshComponent=
+PrimitiveComponent=
 SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" "
 ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" "
 GeometryCollectionComponent="\"Object.ChaosPhysics.ChaosPhysics|Collisions\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
@@ -1841,6 +1842,7 @@ InputSettings.Bindings=True
 /Game/Meshes/Cannon_Base.Cannon_Base=1
 /Game/Meshes/Cannon.Cannon=1
 /Game/Blueprints/Cannon.Cannon=1
+/Game/Blueprints/Actors/Projectiles/Cannon.Cannon=1
 
 [SelectionDetails]
 PreserveScaleRatio=True
