--- a/P2_ASamborska 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/P2_ASamborska 4.26/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -759,12 +759,18 @@ Cannon_C.LOD=False
 Cannon_C.Cooking=False
 StaticMeshComponent.AssetUserData=True
 ChildActorComponent.ComponentTick=True
+Cannon_C.Default=True
+MulticastInlineDelegatePropertyWrapper.DelegateInputs=True
+MulticastInlineDelegatePropertyWrapper.Variable=True
+MulticastInlineDelegatePropertyWrapper.DefaultValueCategory=True
+K2Node_MakeStruct.PinOptions=True
+Cannon_C.Cannon Properties=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/Blueprints/Actors/Projectiles/Cannon
-MRUItem1=/Game/Blueprints/Actors/Projectiles/Projectile
-MRUItem2=/Game/Blueprints/Cannon
-MRUItem3=/Game/Levels/Start
+MRUItem1=/Game/Levels/Start
+MRUItem2=/Game/Blueprints/Actors/Projectiles/Projectile
+MRUItem3=/Game/Blueprints/Cannon
 MRUItem4=/Game/Meshes/Cannon
 MRUItem5=/Game/Meshes/Cannon_Base
 MRUItem6=/Game/Blueprints/Actors/Collectables/BP_Crystal
@@ -1766,15 +1772,15 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings.W,InputSettings.Bindings.
 StaticMeshComponent=
 SphereComponent=
 BP_Crystal_C=
-K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,
 LightComponentBase=
-PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
+PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,
 K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
-Projectile_C=SphereComponent.Physics.ConstraintsGroup,
-Cannon_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+Projectile_C=
+Cannon_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,
 StaticMeshActor=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
-BrushComponent=
-Brush=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,
+BrushComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,
+Brush=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,SphereComponent.Physics.ConstraintsGroup,
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1795,11 +1801,11 @@ ActorComponent=
 StaticMeshComponent=
 MeshComponent=
 PrimitiveComponent=
-SphereComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" "
-ShapeComponent="\"Object.Collision.BodyInstance\" \"Object.Rendering.CustomPrimitiveData\" "
+SphereComponent=
+ShapeComponent=
 GeometryCollectionComponent="\"Object.ChaosPhysics.ChaosPhysics|Collisions\" \"Object.Lighting.LightingChannels\" \"Object.Collision.BodyInstance\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Lighting.LightmassSettings\" \"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Projectile_C="\"Object.Replication.ReplicatedMovement\" "
+Projectile_C=
 ArrowComponent="\"Object.Rendering.CustomPrimitiveData\" "
 
 [PlacementMode]
@@ -1829,6 +1835,7 @@ OnlyBuildVisibility=False
 [DetailCategoriesAdvanced]
 ProjectPackagingSettings.Packaging=True
 InputSettings.Bindings=True
+PropertyWrapper.Variable=True
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/BP_Crystal.BP_Crystal=1
@@ -1947,7 +1954,7 @@ CompileEventDisplayThresholdMs=5
 NodeTemplateCacheCapMB=20.000000
 
 [MessageLog]
-LastLogListing=BlueprintLog
+LastLogListing=LoadErrors
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
